# tap-aircall-linxea

./: .gitignore  LICENSE  pyproject.toml
tap_aircall/: client.py  streams.py
