[tool.poetry]
name = "linxea-tap-aircall"
version = "0.1.0"
description = "`tap-aircall` is a Singer tap for Aircall, built with the Meltano Singer SDK. Forked from TicketSwap/tap-aircall with extended stream schemas."
readme = "README.md"
authors = ["Linxea"]
keywords = [
    "ELT",
    "Aircall",
]
license = "Apache-2.0"
packages = [
    { include = "tap_aircall" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
singer-sdk = { version="~=0.42.1" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.32.3"
cached-property = "~=2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.42.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",
    "ANN102",
]
select = ["ALL"]
src = ["tap_aircall"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_aircall"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-aircall = 'tap_aircall.tap:TapAircall.cli'
